# nulltracer

./: .coverage  .env  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Caddyfile.current  DEPLOYMENT.md  EHT_Portfolio_Project_Plan.md  LICENSE  PLAN.md  README.md  bench.html  coverage.xml  deploy.sh  deployment_content.md  docker-compose.yml  eht_comparison_gpu.ipynb  fix.sh  fix_adaptive.py  fix_encoding.sh  fix_fmax.py  fix_g_factor.py  fix_html.py  fix_integrators_g.py  fix_kernels.py  fix_plunging.py  fix_py.py  fix_state.py  fix_tests.py  full_kernel.cu  index.html  migrate.sh  nulltracer-renderer.xml  nulltracer.code-workspace  nulltracer.ipynb  nulltracer_kernels.py  nulltracer_portfolio.ipynb  nvcc  patch-notebook-imports.sh  pyproject.toml  (+13 more)
.forgejo/: README.md
.forgejo/workflows/: ci.yml  mirror-github.yml
.github/workflows/: ci.yml  test.yml
assets/: nulltracer-renderer.xml
docs/images/: README.md
docs/internal/: MIGRATION.md
js/: isco-calculator.js  main.js  server-client.js  shader-generator.js  ui-controller.js  webgl-renderer.js  ws-client.js
legacy/: ARCHITECTURE.md  FEATURE-PLAN.md  deploy.sh  docker-compose.yml
legacy/js/: ui-controller.js  ws-client.js
legacy/server/: .dockerignore  app.py  renderer.py  requirements.txt
legacy/server/scenes/: charged-black-hole.json  default.json  extreme-kerr.json  schwarzschild.json
notebooks/: eht_comparison_final.ipynb  nulltracer.ipynb  nulltracer_portfolio.ipynb  tests.ipynb
nulltracer/: __init__.py  _kernel_utils.py  _params.py  _physics_utils.py  bloom.py  compare.py  eht_validation.py  isco.py  ray.py  render.py  renderer.py  server.py  skymap.py
nulltracer-patch/: README.md
nulltracer-patch/notebooks/: nulltracer.ipynb
nulltracer-patch/nulltracer/: compare.py
nulltracer/kernels/: backgrounds.cu  cks_metric.cu  disk.cu  geodesic_base.cu  ray_trace.cu
nulltracer/kernels/integrators/: adaptive_step.cu  kahanli8s.cu  kahanli8s_ks.cu  rk4.cu  rk4_cks.cu  rkdp8.cu  rkdp8_cks.cu  rkdp8_const.h  rkn86.cu  (+6 more)
plans/: cuda-migration-and-advanced-techniques.md  kahanli8s-high-inclination-fix.md  tao-preto-saha-adaptive-step.md  tao-yoshida-design.md  unified-roadmap.md
reference-code/Gradus.jl/: Project.toml  README.md
reference-code/raptor/: README.md
reference-code/ynogkm/: ReadMe  readme.txt  ynogkm.f90
scripts/: execute_notebook.sh  run_tests.sh
server/: Dockerfile  __init__.py  app.py  backgrounds.py  cache.py  eht_validation.py  generate_icon.py  isco.py  renderer.py  renderer_cuda.py  requirements.txt  scenes.py  shader.py  shader_base.py
server/integrators/: __init__.py  rk4.py  rkdp8.py  yoshida4.py  yoshida6.py  yoshida8.py
server/kernels/: backgrounds.cu  disk.cu  geodesic_base.cu  ray_trace.cu
server/scenes/: face-on.json
server/tests/: README.md  test_gfactor.py
tests/: conftest.py  test_cache.py  test_doppler_asymmetry.py  test_eht_validation.py  test_hamiltonian_conservation.py  test_isco.py  test_renderer_params.py  test_shadow.py  test_shadow_boundary.py  test_shadow_render.py  test_struct_sync.py
web/: index.html
web/js/: main.js  ui-controller.js
(+83 files in other folders)
