[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nulltracer"
version = "1.0.0"
description = "GPU-accelerated null geodesic ray tracer for Kerr-Newman black holes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ethan Knox", email = "ethank5149@gmail.com"},
]
keywords = [
    "black hole", "ray tracing", "general relativity",
    "kerr metric", "geodesic", "CUDA", "GPU",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: CUDA",
]
dependencies = [
    "numpy>=1.24",
    "cupy-cuda12x>=13.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
notebook = ["jupyterlab>=4.0", "ipywidgets>=8.0"]
skymap = ["Pillow>=10.0", "OpenEXR>=3.0"]
all = ["nulltracer[notebook,skymap]"]

[project.urls]
Repository = "https://github.com/ethank5149/nulltracer"

[tool.setuptools.packages.find]
include = ["nulltracer*"]

[tool.setuptools.package-data]
nulltracer = ["kernels/**/*.cu"]
